--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "nyc.c4q.calculator"
-        minSdkVersion 16
+        minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -26,6 +26,8 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.fathzer:javaluator:3.0.0'
+    compile 'com.github.niltonvasques:mathjs-android:v0.2.1'
     testCompile 'junit:junit:4.12'
+
+    compile 'com.github.niltonvasques:mathjs-android:v0.2.1'
 }
